2011-08-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Restore text window on space key:
	also show terminal window if it is currently minimized.

	* src/command.c (pause_command) src/win/wgnuplib.h (GW) src/win/wgraph.c
	src/win/winmain.h src/win/winmain.c term/win.trm: Support multiple
	graph windows. All state variables of graph windows were contained
	in a single struct already. Replace all references to this struct
	(graphwin) by pointers and dynamically allocate new instances when
	required. Do not pass on mouse and key events from inactive windows.
	Note: Since a single number passed to `set term win` is now interpreted
	as window identifier, the old and fontsize options are no longer
	supported and the `font` keyword is now required. This is consistent
	with other terminals (e.g. x11 and wxt).

	* src/win/wgnuplib.h src/win/wgraph.c: Make GraphChangeFont static. 

2011-08-15  Reinier Heeres  <rheeres@users.sourceforge.net>

	* src/win/pgnuplot.c: Detect termination of wgnuplot. Slightly enhanced
	version of SF patch #2373741.

2011-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* PORTING config/config.cyg config/config.dj2 config/config.mgw 
	config/config.nt config/config.os2 config/config.oww
	config/makefile.unx configure.in configure.vms docs/Makefile.in
	docs/doc2texi.el docs/gpcard.tex src/Makefile.am src/makefile.all 
	src/makefile.awc src/rgipgnu src/term.h term/rgip.trm 

	Remove code specific to the rgip terminal (Redwood Graphics Interface
	Protocol). The company (uniplex) supporting this protocol no longer
	exists.  The terminal itself no longer compiles cleanly, and valgrind
	shows many buffer overflows and alloc/free errors.
	19 files changed, 13 insertions(+), 841 deletions(-)

2011-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/plotstyles.gnu docs/gnuplot.doc term/be.trm term/canvas.trm
	term/cgm.trm term/ai.trm term/aquaterm.trm term/cgi.trm:
	Documentation updates
